--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,5 +1,5 @@
-# Use the mysql image
-FROM mysql
+# Use the mariadb image
+FROM mariadb
 
 # Copy all the files in the docker-entrypoint-initdb.d inside the container 
 # which will run automatically when the sql server will start
