--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -1,11 +1,12 @@
 # 
 FROM node:alpine
 
-# Copy package.json and package-lock.json to the image
-# We need them to build the dependencies for our project
+WORKDIR /app
+
 RUN npm i npm@latest -g
-COPY package.json package.json
-COPY package-lock.json package-lock.json
+
+COPY package.json ./
+COPY package-lock.json ./
 
 # Run `npm ci` to install project dependencies
 RUN npm ci
@@ -16,6 +17,3 @@ ENV PORT=3000
 
 # Copy the entire project directory to the image
 COPY . .
-
-# Default command to start the app
-CMD [ "npm", "start" ]
