small changes that didn't fix anything :*(

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -4,3 +4,4 @@ FROM mariadb
 # Copy all the files in the docker-entrypoint-initdb.d inside the container 
 # which will run automatically when the sql server will start
 COPY ./scripts/setup.sql /docker-entrypoint-initdb.d/
+COPY ./scripts/setupJob.sql /docker-entrypoint-initdb.d/
