Docker react template

--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -4,9 +4,8 @@ FROM node:alpine
 WORKDIR /app
 
 RUN npm i npm@latest -g
-
-COPY package.json ./
-COPY package-lock.json ./
+COPY package.json package.json
+COPY package-lock.json package-lock.json
 
 # Run `npm ci` to install project dependencies
 RUN npm ci
@@ -15,5 +14,6 @@ RUN npm ci
 ENV CI=true
 ENV PORT=3000
 
-# Copy the entire project directory to the image
 COPY . .
+
+CMD [ "npm", "start" ]
