--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -1,7 +1,8 @@
 # 
 FROM node:alpine
 
-WORKDIR /app
+# Copy package.json and package-lock.json to the image
+# We need them to build the dependencies for our project
 
 RUN npm i npm@latest -g
 COPY package.json package.json
@@ -14,6 +15,8 @@ RUN npm ci
 ENV CI=true
 ENV PORT=3000
 
+# Copy the entire project directory to the image
 COPY . .
 
+# Default command to start the app
 CMD [ "npm", "start" ]
