--- a/compose.yml
+++ b/compose.yml
@@ -39,11 +39,11 @@ services:
     environment:
       # Tell the react app that our spring server is running here
       - BACKEND_PROXY=http://spring:8080
-    # develop:
-    #   watch:
-    #     - action: sync
-    #       path: ./react
-    #       target: /app
+    develop:
+      watch:
+        - action: sync
+          path: ./react
+          target: /app
     networks:
       - spring-react    # Allow the react app to discover the spring app
 
