--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.1.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example.cis4900.spring</groupId>
+	<groupId>com.pixelate.geojobsearch</groupId>
 	<artifactId>template</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>template</name>
