Bugfix: fix scraper to work on mac

--- a/compose.yml
+++ b/compose.yml
@@ -45,7 +45,7 @@ services:
 
   scraper:
     build: ./scraper  # Look for Dockerfile in this path
-    command: python main.py
+    command: python3 main.py
     environment:
       - DB_ADDRESS=mysql
       - DB_DATABASE=geo_job_search_db
