Add Pytest-cov and improve coverage to the required maount

--- a/test.yml
+++ b/test.yml
@@ -9,7 +9,7 @@ services:
       - ./spring-test-results:/workspace/app/target/site/jacoco
   python-test:
     build: ./scraper
-    command: pytest test_scraper.py
+    command: pytest --cov scraper
     environment:
       - DB_ADDRESS=localhost
       - DB_DATABASE=testdb
