--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -86,6 +86,26 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.1.2</version> <!-- Use the latest version suitable for your project -->
+				<configuration>
+					<!-- Specify the location of the checkstyle configuration file -->
+					<configLocation>src/main/resources/checkstyle.xml</configLocation>
+					<encoding>UTF-8</encoding>
+					<consoleOutput>true</consoleOutput>
+					<failsOnError>true</failsOnError>
+					<!-- You can specify to include or exclude certain files -->
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
