--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -1,9 +1,20 @@
 ARG PYTHON_VERSION=3.12
 FROM python:${PYTHON_VERSION}-slim as base
 
+ENV POETRY_NO_INTERACTION=1 \
+      PYTHONFAULTHANDLER=1 \
+      PYTHONUNBUFFERED=1 \
+      PIP_DEFAULT_TIMEOUT=100 \
+      POETRY_VIRTUALENVS_CREATE=false \
+      POETRY_CACHE_DIR='/var/cache/pypoetry' \
+      POETRY_HOME='/usr/local' \
+      POETRY_VERSION=1.7.1
 
 RUN apt-get update -y && \
     apt-get install -y libmariadb-dev gcc firefox-esr
+
+# Only way that worked dont ask me why <3
+RUN pip install poetry==$POETRY_VERSION
 
 COPY geckodriver-v0.34.0-linux-aarch64.tar.gz /usr/bin/
 RUN tar -xvzf /usr/bin/geckodriver-v0.34.0-linux-aarch64.tar.gz -C /usr/bin/
@@ -15,44 +26,13 @@ RUN tar -xvzf /usr/bin/geckodriver-v0.34.0-linux64.tar.gz -C /usr/bin/
 RUN chmod +x /usr/bin/geckodriver
 RUN rm /usr/bin/geckodriver-v0.34.0-linux64.tar.gz
 
-# RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-# RUN echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
-# RUN apt-get update -y && apt-get install -y google-chrome-stable
-
-# Prevents Python from writing pyc files.
-ENV PYTHONDONTWRITEBYTECODE=1
-#ENV LD_PRELOAD=/usr/lib/mariadb/libmariadb.so
-#ENV LD_LIBRARY_PATH=/usr/lib/mariadb
-# Keeps Python from buffering stdout and stderr to avoid situations where
-# the application crashes without emitting any logs due to buffering.
-ENV PYTHONUNBUFFERED=1
-
 WORKDIR /app
 
-# Create a non-privileged user that the app will run under.
-# See https://docs.docker.com/go/dockerfile-user-best-practices/
-# ARG UID=10001
-# RUN adduser \
-#     --disabled-password \
-#     --gecos "" \
-#     --home "/nonexistent" \
-#     --shell "/sbin/nologin" \
-#     --no-create-home \
-#     --uid "${UID}" \
-#     appuser
+COPY pyproject.toml .
+COPY poetry.lock .
 
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.cache/pip to speed up subsequent builds.
-# Leverage a bind mount to requirements.txt to avoid having to copy them into
-# into this layer.
-RUN --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=bind,source=requirements.txt,target=requirements.txt \
-    python -m pip install -r requirements.txt
+RUN poetry install --no-root --no-dev
 
-
-# Switch to the non-privileged user to run the application.
-#USER appuser
-
-# Copy the source code into the container.
 COPY . .
-CMD ["python3", "main.py"]
+
+CMD ["poetry", "run", "python", "main.py"]
