--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,7 @@ python-test:
   image: python:3.12
   script:
     - cd scraper
+    - apt-get update && apt-get install -y firefox-esr
     - chmod +x install.sh && ./install.sh
     - pip install poetry==1.7.1
     - poetry install
