Removed staging flag in the production compose file

--- a/compose.deploy.yml
+++ b/compose.deploy.yml
@@ -12,7 +12,7 @@ services:
       - TZ=Etc/UTC
       - URL=pixelate.socs.uoguelph.ca
       - VALIDATION=http
-      - STAGING=true #optional
+      - STAGING=false #optional
     volumes:
       - ./swag/config:/config
     ports:
