--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -2,13 +2,15 @@ FROM node:alpine
 
 # Copy package.json and package-lock.json to the image
 # We need them to build the dependencies for our project
-
 RUN npm i npm@latest -g
 COPY package.json package.json
 COPY package-lock.json package-lock.json
 
 # Run `npm ci` to install project dependencies
 RUN npm ci
+
+# Install @vis.gl/react-google-maps and @googlemaps/markerclusterer
+RUN npm install @vis.gl/react-google-maps @googlemaps/markerclusterer
 
 # Set environment variables
 ENV CI=true
